--- a/server/package.json
+++ b/server/package.json
@@ -8,14 +8,20 @@
     "test": "jest --detectOpenHandles --coverage"
   },
   "dependencies": {
+    "base58": "^2.0.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.2.6",
+    "mongoose": "^5.12.13",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/node": "^7.14.2",
     "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.5",
+    "@shelf/jest-mongodb": "^1.2.5",
     "babel-jest": "^27.0.2",
     "jest": "^27.0.4",
     "nodemon": "^2.0.7",
@@ -27,5 +33,8 @@
         "@babel/plugin-transform-runtime"
       ]
     }
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
